force-app/main/default/objects/Job_Application__c/fields/Candidate_Email_id__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email_id__c</fullName>
    <formula>Candidate_Name__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Email id</label>
    <type>Text</type>
</CustomField>