force-app/main/default/objects/Job_Application__c/fields/Job_Profile__c.field-meta.xml
<CustomField>
    <fullName>Job_Profile__c</fullName>
    <formula>Job_ID__r.Job_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Profile</label>
    <type>Text</type>
</CustomField>