force-app/main/default/objects/Job_Application__c/fields/Job_Salary__c.field-meta.xml
<CustomField>
    <fullName>Job_Salary__c</fullName>
    <formula>Job_ID__r.Salary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>